--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -357,6 +357,7 @@
 			}
 		}
 	</style>
+	<meta name="google-site-verification" content="_8-ncesvBNxN2ZgMtCQndjnJfObPIUGtZOtUvwraGqs" />
 </head>
 <body class="body">
 	<h1 style="position: absolute; top: -100%;">Архаизмолог Plumarcanus Сир Элик</h1>
